# Hakathon_Todo

./: .env.example  .gitignore  README.md  TEST_REPORT.md  pyproject.toml  test_app.py  todo.db
.claude/agents/: backend-manager.md  constitution-keeper.md  frontend-manager.md  full-stack-reviewer.md  fullstack-ui-developer.md  spec-manager.md  todo-orchestrator.md  todo-task-manager.md
.claude/skills/: auth-authorization.md  crud-operations.md  database-integration.md  deployment.md  fastapi-development.md  pydantic-validation.md  restful-api-design.md  testing.md
.specify/memory/: constitution.md
.specify/templates/: adr-template.md  plan-template.md  spec-template.md  tasks-template.md
backend/: auth.py  database.py  dependencies.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/routers/: auth.py  tasks.py
frontend/: package.json  tailwind.config.js
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: TaskCard.tsx  TaskForm.tsx  TaskList.tsx
history/prompts/002-todo-fullstack-web/: 001-generate-implementation-plan.plan.prompt.md  002-generate-implementation-tasks.tasks.prompt.md  003-implement-mvp-authentication.green.prompt.md  004-implement-full-crud-functionality.green.prompt.md
specs/001-todo-cli-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-todo-fullstack-web/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py  cli.py  main.py  operations.py  storage.py  todo.py
(+17 files in other folders)
